--- a/main.html
+++ b/main.html
@@ -6,7 +6,28 @@
     <title>Document</title>
 </head>
 <body>
-    <p>Hello world</p>
-    <p>Мастер Шеф</p> 
+    <h1>Гарячі клавіші Windows</h1>
+    <h4>Ctrl + c</h4>
+    <p>Копіювати вибраний контент</p>
+   <hr>
+   <h4>Ctrl + v</h4>
+    <p>Вставити вибраний контент</p>
+   <hr>
+   <h4>Ctrl + x</h4>
+   <p>Вирізати вибраний контент (Видалити з поточного місця з можливістю розмістити його в іншому місці)</p>
+  <hr>
+  <h4>Ctrl + Shift + d</h4>
+  <p>Дублювати рядок, на якому встановлений курсор або виділена частина</p>
+ <hr>
+ <h4>Ctrl + z</h4>
+ <p>скасувати минулу дію</p>
+ <br>
+<h4>Необхідність використання</h4>
+<p>Використання сполучення клавіш дозволяє спростити виконання постійно повторюваних або простих дій, які мишею вимагають пару і більше кліків (натискань лівої та правої клавіші миші), що значно збільшує кількість дій, що виконуються з клавіатури.</p>
+<h4>Використання клавіш.</h4>
+<p>Як приклад розглянемо поєднання клавіш Ctrl+Shift+d.<br>
+Натискати клавіші потрібно не по черзі (як у калькуляторах) і не одночасно (як на піаніно акордом). Спочатку слід затиснути клавіші Ctrl та Shift, і , не відпускаючи їх, натиснути клавішу d. Затиснуті в момент натискання клавіші  d Ctrl і Shift модифікують дію клавіші d. Тобто при натисканні клавіші d виконується не основна дія (написання символу d), а одна з "вторинних" (Дублювання)</p>
+
+
 </body>
 </html>
